src/common/styles/templates/insight-components/ordered-list.css
/** INLINE STYLES **/

.Insight-ol-inline {
  list-style: none;
  counter-reset: olInlineCount;
  width: calc(100% - 5px);
  max-width: 580px;
  @apply my-6;
  @apply mx-auto;

  @screen xl {
    max-width: 750px;
  }

  b {
    @apply font-bold;
  }
}

.Insight-ol-inline > li {
  counter-increment: olInlineCount;
  @apply flex;
  @apply items-start;
  @apply flex-nowrap;
  @apply mb-8;

  &:before {    
    content: counter(olInlineCount) ". ";
    height: 100%;
    width: 25px;
    @apply flex-shrink-0;
    @apply relative;
    @apply block;
    @apply font-bold;
    @apply text-xl;
    @apply leading-relaxed;
    @apply tracking-wider;

    @media (min-width: 426px) and (max-width: 899px) {
      @apply text-lg;
    }

    @media (max-width: 425px) {
      @apply text-base;
    }
  }
}

.Insight-ol-inline > li {
  p {
    @apply block;
    @apply mb-0;
    @apply mx-0;
    white-space: pre-wrap;
  }

  ul {
    @apply flex-shrink-0;
    @apply mb-0;
  }

  ol {
    @apply flex-shrink-0;
  }
}


/** BLOCK TITLE STYLES **/
.Insight-ol-bt {
  list-style: none;
  counter-reset: olBtCount;
  max-width: 580px;
  @apply my-6;
  @apply mx-auto;

  @screen xl {
    max-width: 750px;
  }
}

.Insight-ol-bt__img {
  @apply mb-8;
}

.Insight-ol-bt > li {
  counter-increment: olBtCount;
  @apply flex;
  @apply items-start;
  @apply flex-wrap;
  @apply mb-8;

  b {
    @apply font-bold;
  }

  p {
    @apply block;
    @apply mx-0;
    @apply mb-0;
    white-space: pre-wrap;
  }

  p + p {
    @apply mt-6;
  }

  ul {
    @apply flex-shrink-0;
    @apply mb-0;
  }

  ol {
    @apply flex-shrink-0;
  }
}

.Insight-ol-bt__title {
  @apply flex;
  @apply w-full;
  @apply flex-nowrap;
  @apply items-start;
  @apply mb-2;

  p {
    @apply hidden;
  }

  h4 {
    margin-left: initial;
    margin-right: initial;
    width: auto;
  }

  &:before {    
    content: counter(olBtCount) ". ";

    @apply flex-shrink-0;
    @apply relative;
    @apply block;
    @apply mr-2;
    @apply font-bold;
    @apply tracking-wider;
    @apply text-3xl;
    line-height: 1;
    width: auto;

    @apply md:text-4xl;
    @screen md {
      top: -7px;
    }

    @screen lg {
      top: -5px;
    }

    @media (max-width: 425px) {
      @apply text-xl;
    }
  }
}

/** STEPS STYLES **/
.Insight-ol-steps {
  list-style: none;
  counter-reset: olStepsCount;
  max-width: 580px;
  @apply my-6;
  @apply mx-auto;

  @screen xl {
    max-width: 750px;
  }
}

.Insight-ol-steps__img {
  @apply mb-8;
}

.Insight-ol-steps > li {
  counter-increment: olStepsCount;
  @apply flex;
  @apply items-start;
  @apply flex-wrap;
  @apply mb-8;

  b {
    @apply font-bold;
  }

  p {
    @apply block;
    @apply mb-0;
    @apply mx-0;
    white-space: pre-wrap;
  }

  p + p {
    @apply mt-6;
  }

  ul {
    @apply flex-shrink-0;
    @apply mb-0;
  }

  ol {
    @apply flex-shrink-0;
  }
}

.Insight-ol-steps__title {
  @apply flex;
  @apply w-full;
  @apply flex-nowrap;
  @apply items-start;
  @apply mb-2;

  p {
    @apply hidden;
  }

  h4 {
    margin-left: initial;
    margin-right: initial;
    width: auto;
  }

  &:before {    
    content: "STEP " counter(olStepsCount) ". ";

    @apply flex-shrink-0;
    @apply relative;
    @apply inline-block;
    @apply mr-2;
    @apply font-bold;
    @apply tracking-wider;
    @apply text-3xl;
    line-height: 1;
    width: auto;

    @apply md:text-4xl;

    @screen md {
      top: -7px;
    }

    @screen lg {
      top: -5px;
    }

    @media (max-width: 425px) {
      @apply text-xl;
    }
  }
}

